# karukan

./: AGENTS.md  CLAUDE.md  Cargo.toml  MODEL_LICENSES.md  README.md  THIRD_PARTY_CARGO_LICENSES.html  THIRD_PARTY_LICENSES  about.hbs  about.toml  dictionary-sources.toml
.github/workflows/: karukan-engine-ci.yml  karukan-im-ci.yml
docs/: dictionary-licenses.md  dictionary-release.md  redistribution.md  user-dictionary.md
karukan-cli/: Cargo.toml  README.md
karukan-engine/src/: dict.rs  dictionary_import.rs  dictionary_source.rs  geographic_import.rs  lattice.rs  lib.rs  segment_learning.rs
karukan-engine/src/kanji/: backend.rs  hf_download.rs  mod.rs
karukan-engine/src/romaji/: converter.rs
karukan-engine/tests/: kanji_conversion_tests.rs  romaji_tests.rs
karukan-fcitx5/fcitx5-addon/src/: karukan.cpp  karukan.h
karukan-fcitx5/include/: karukan.h
karukan-fcitx5/src/ffi/: input.rs  tests.rs
karukan-im/: Cargo.toml  README.md
karukan-im/config/: default.toml
karukan-im/src/: lib.rs
karukan-im/src/config/: settings.rs
karukan-im/src/core/: keycode.rs  preedit.rs  state.rs
karukan-im/src/core/engine/: async_live.rs  chunk.rs  conversion.rs  cursor.rs  display.rs  init.rs  input.rs  long_conversion.rs  mod.rs  morphology.rs  reading_correction.rs  surface_alignment.rs  types.rs
karukan-im/src/core/engine/tests/: alphabet.rs  basic.rs  candidates.rs  chunks.rs  conversion.rs  cursor.rs  emoji.rs  katakana.rs  learning.rs  live_conversion.rs  mod.rs  mode_toggle.rs  rewriter.rs  surrounding.rs
karukan-im/src/server/: mod.rs  protocol.rs  tests.rs
karukan-macos/: Makefile  README.md
karukan-macos/Sources/KarukanIME/: CandidateWindowController.swift  EngineClient.swift  EngineProtocol.swift  KarukanInputController.swift  KeyCodeMap.swift
karukan-macos/Tests/KarukanIMETests/: EngineProtocolTests.swift  KeyCodeMapTests.swift  TransportTests.swift
scripts/: package-dictionary.sh
